--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,9 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/app.py" }
-    ]
+    ],
+    "env": {
+      "SUPABASE_URL": "@supabase_url",
+      "SUPABASE_KEY": "@supabase_key"
+    }
   }
