--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       { "src": "/(.*)", "dest": "/app.py" }
     ],
     "env": {
-      "SUPABASE_URL": "@SUPABASE_URL",
-      "SUPABASE_KEY": "@NEXT_PUBLIC_SUPABASE_URL"
-    }
+        "SUPABASE_URL": "@supabase_url",
+        "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key"
+      }
   }
